5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3986/executions/1671_1100.log
== TEST (2019-04-28 18:24:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

#Uma entrada com valor real inteiro(representando a nota)
valor_nota:int(input("valor da nota :"))
#Sera um if, elife para cada nota e por ultimo o else sera se " Animal: Invalido"
if (valor_nota == "animal") :
	x1= 2
	print(x1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if (valor_nota == "animal") :
NameError: name 'valor_nota' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:25:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

#Uma entrada com valor real inteiro(representando a nota)
vn:int(input("valor da nota :"))
#Sera um if, elife para cada nota e por ultimo o else sera se " Animal: Invalido"
if (vn == "animal") :
	x1= 2
	print(x1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if (vn == "animal") :
NameError: name 'vn' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:26:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

#Uma entrada com valor real inteiro(representando a nota)
valor_nota:int(input("valor da nota :"))
#Sera um if, elife para cada nota e por ultimo o else sera se " Animal: Invalido"
if (valor_nota == "animal") :
	x1=tartaruga
	print(x1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if (valor_nota == "animal") :
NameError: name 'valor_nota' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:26:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

#Uma entrada com valor real inteiro(representando a nota)
valor_nota=int(input("valor da nota :"))
#Sera um if, elife para cada nota e por ultimo o else sera se " Animal: Invalido"
if (valor_nota == "animal") :
	x1=tartaruga
	print(x1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if (valor_nota == "animal") :
NameError: name 'valor_nota' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:27:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

#Uma entrada com valor real inteiro(representando a nota)
valor_nota=int(input("valor da nota :"))
#Sera um if, elife para cada nota e por ultimo o else sera se " Animal: Invalido"
if (valor_nota == "animal") :
	x1=tartaruga
	print(x1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if (valor_nota == "animal") :
NameError: name 'valor_nota' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:27:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

#Uma entrada com valor real inteiro(representando a nota)
valor_nota=int(input("valor da nota :"))
#Sera um if, elife para cada nota e por ultimo o else sera se " Animal: Invalido"
if (valor_nota == "2") :
	x1=tartaruga
	print(x1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if (valor_nota == "animal") :
NameError: name 'valor_nota' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:27:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

#Uma entrada com valor real inteiro(representando a nota)
valor_nota=int(input("valor da nota :"))
#Sera um if, elife para cada nota e por ultimo o else sera se " Animal: Invalido"
if (valor_nota == 2) :
	x1=tartaruga
	print(x1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if (valor_nota == "animal") :
NameError: name 'valor_nota' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:28:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

#Uma entrada com valor real inteiro(representando a nota)
valor_nota=int(input("valor da nota :"))
#Sera um if, elife para cada nota e por ultimo o else sera se " Animal: Invalido"
if (valor_nota == 2) :
	x1= "tartaruga"
	print(x1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if (valor_nota == "animal") :
NameError: name 'valor_nota' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:29:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

#Uma entrada com valor real inteiro(representando a nota)
valor_nota=int(input("valor da nota :"))
#Sera um if, elife para cada nota e por ultimo o else sera se " Animal: Invalido"
if (valor_nota == 2) :
	x1= "Tartaruga"
	print(x1)
elif (valor_nota == 5) :
	print("Garca")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if (valor_nota == "animal") :
NameError: name 'valor_nota' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:29:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

#Uma entrada com valor real inteiro(representando a nota)
valor_nota=int(input("valor da nota :"))
#Sera um if, elife para cada nota e por ultimo o else sera se " Animal: Invalido"
if (valor_nota == 2) :
	x1= "Tartaruga"
	print(x1)
elif (valor_nota == 5) :
	print("Garca")
elif (valor_nota == 10) :
	print("Mico-leao-dourado")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if (valor_nota == "animal") :
NameError: name 'valor_nota' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:30:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

#Uma entrada com valor real inteiro(representando a nota)
valor_nota=int(input("valor da nota :"))
#Sera um if, elife para cada nota e por ultimo o else sera se " Animal: Invalido"
if (valor_nota == 2) :
	x1= "Tartaruga"
	print(x1)
elif (valor_nota == 5) :
	print("Garca")
elif (valor_nota == 10) :
	print("Mico-leao-dourado")
elif (valor_nota == 20) :
	print("Onca-pintado")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if (valor_nota == "animal") :
NameError: name 'valor_nota' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:33:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

#Uma entrada com valor real inteiro(representando a nota)
valor_nota=int(input("valor da nota :"))
#Sera um if, elife para cada nota e por ultimo o else sera se " Animal: Invalido"
if (valor_nota == 2) :
	x1= "Tartaruga"
	print(x1)
elif (valor_nota == 5) :
	print("Garca")
elif (valor_nota == 10) :
	print("Arara")
elif (valor_nota == 20) :
	print("Mico-leao-dourado")
elif (valor_nota == 50) :
	print("Onca-pintada")
elif (valor_nota == 100) :
	print("Garoupa")
	
else :
	print("invalido")
-- OUTPUT:
Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:33:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

#Uma entrada com valor real inteiro(representando a nota)
valor_nota=int(input("valor da nota :"))
#Sera um if, elife para cada nota e por ultimo o else sera se " Animal: Invalido"
if (valor_nota == 2) :
	x1= "Tartaruga"
	print(x1)
elif (valor_nota == 5) :
	print("Garca")
elif (valor_nota == 10) :
	print("Arara")
elif (valor_nota == 20) :
	print("Mico-leao-dourado")
elif (valor_nota == 50) :
	print("Onca-pintada")
elif (valor_nota == 100) :
	print("Garoupa")
	
else :
	print("invalido")
-- OUTPUT:
Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 18:33:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

#Uma entrada com valor real inteiro(representando a nota)
valor_nota=int(input("valor da nota :"))
#Sera um if, elife para cada nota e por ultimo o else sera se " Animal: Invalido"
if (valor_nota == 2) :
	x1= "Tartaruga"
	print(x1)
elif (valor_nota == 5) :
	print("Garca")
elif (valor_nota == 10) :
	print("Arara")
elif (valor_nota == 20) :
	print("Mico-leao-dourado")
elif (valor_nota == 50) :
	print("Onca-pintada")
elif (valor_nota == 100) :
	print("Garoupa")
	
else :
	print("invalido")
-- EXECUTION TIME:
0.155683
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 18:34:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

#Uma entrada com valor real inteiro(representando a nota)
valor_nota=int(input("valor da nota :"))
#Sera um if, elife para cada nota e por ultimo o else sera se " Animal: Invalido"
if (valor_nota == 2) :
	print("Tartaruga")
elif (valor_nota == 5) :
	print("Garca")
elif (valor_nota == 10) :
	print("Arara")
elif (valor_nota == 20) :
	print("Mico-leao-dourado")
elif (valor_nota == 50) :
	print("Onça-pintada")
elif (valor_nota == 100) :
	print("Garoupa")
	
else :
	print("invalido")
-- EXECUTION TIME:
0.132441
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 18:34:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

#Uma entrada com valor real inteiro(representando a nota)
valor_nota=int(input("valor da nota :"))
#Sera um if, elife para cada nota e por ultimo o else sera se " Animal: Invalido"
if (valor_nota == 2) :
	print("Tartaruga")
elif (valor_nota == 5) :
	print("Garça")
elif (valor_nota == 10) :
	print("Arara")
elif (valor_nota == 20) :
	print("Mico-leao-dourado")
elif (valor_nota == 50) :
	print("Onça-pintada")
elif (valor_nota == 100) :
	print("Garoupa")
	
else :
	print("invalido")
-- EXECUTION TIME:
0.201537
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:34:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

#Uma entrada com valor real inteiro(representando a nota)
valor_nota=int(input("valor da nota :"))
#Sera um if, elife para cada nota e por ultimo o else sera se " Animal: Invalido"
if (valor_nota == 2) :
	print("Tartaruga")
elif (valor_nota == 5) :
	print("Garça")
elif (valor_nota == 10) :
	print("Arara")
elif (valor_nota == 20) :
	print("Mico-leao-dourado")
elif (valor_nota == 50) :
	print("Onça-pintada")
elif (valor_nota == 100) :
	print("Garoupa")
	
else :
	print("invalido")
-- OUTPUT:
Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 18:34:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

#Uma entrada com valor real inteiro(representando a nota)
valor_nota=int(input("valor da nota :"))
#Sera um if, elife para cada nota e por ultimo o else sera se " Animal: Invalido"
if (valor_nota == 2) :
	print("Tartaruga")
elif (valor_nota == 5) :
	print("Garça")
elif (valor_nota == 10) :
	print("Arara")
elif (valor_nota == 20) :
	print("Mico-leao-dourado")
elif (valor_nota == 50) :
	print("Onça-pintada")
elif (valor_nota == 100) :
	print("Garoupa")
	
else :
	print("Invalido")
-- EXECUTION TIME:
0.192683
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:35:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

#Uma entrada com valor real inteiro(representando a nota)
valor_nota=int(input("valor da nota :"))
#Sera um if, elife para cada nota e por ultimo o else sera se " Animal: Invalido"
if (valor_nota == 2) :
	print("Tartaruga")
elif (valor_nota == 5) :
	print("Garça")
elif (valor_nota == 10) :
	print("Arara")
elif (valor_nota == 20) :
	print("Mico-leao-dourado")
elif (valor_nota == 50) :
	print("Onça-pintada")
elif (valor_nota == 100) :
	print("Garoupa")
	
else :
	print("Invalido")
-- OUTPUT:
Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:38:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

#Uma entrada com valor real inteiro(representando a nota)
valor_nota=int(input("valor da nota :"))
#Sera um if, elife para cada nota e por ultimo o else sera se " Animal: Invalido"
if (valor_nota == 2) :
	print("Entrada: " , valor_nota)
	print("Animal: Tartaruga")
elif (valor_nota == 5) :
	print("Entrada: " , valor_nota)
	print("Animal: Garça")
elif (valor_nota == 10) :
	print("Entrada: " , valor_nota)
	print("Animal: Arara")
elif (valor_nota == 20) :
	print("Entrada: " , valor_nota)
	print("Animal: Mico-leao-dourado")
elif (valor_nota == 50) :
	print("Entrada: " , valor_nota)
	print("Animal: Onça-pintada")
elif (valor_nota == 100) :
	print("Entrada: " , valor_nota)
	print("Animal: Garoupa")
	
else :
	print("Entrada: " , valor_nota)
	print("Invalido")
-- OUTPUT:
Entrada:  100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 18:38:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

#Uma entrada com valor real inteiro(representando a nota)
valor_nota=int(input("valor da nota :"))
#Sera um if, elife para cada nota e por ultimo o else sera se " Animal: Invalido"
if (valor_nota == 2) :
	print("Entrada: " , valor_nota)
	print("Animal: Tartaruga")
elif (valor_nota == 5) :
	print("Entrada: " , valor_nota)
	print("Animal: Garça")
elif (valor_nota == 10) :
	print("Entrada: " , valor_nota)
	print("Animal: Arara")
elif (valor_nota == 20) :
	print("Entrada: " , valor_nota)
	print("Animal: Mico-leao-dourado")
elif (valor_nota == 50) :
	print("Entrada: " , valor_nota)
	print("Animal: Onça-pintada")
elif (valor_nota == 100) :
	print("Entrada: " , valor_nota)
	print("Animal: Garoupa")
	
else :
	print("Entrada: " , valor_nota)
	print("Invalido")
-- EXECUTION TIME:
0.134888
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada:  7
Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada:  50
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 18:38:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

#Uma entrada com valor real inteiro(representando a nota)
valor_nota=int(input("valor da nota :"))
#Sera um if, elife para cada nota e por ultimo o else sera se " Animal: Invalido"
if (valor_nota == 2) :
	print("Entrada: " , valor_nota)
	print("Animal: Tartaruga")
elif (valor_nota == 5) :
	print("Entrada: " , valor_nota)
	print("Animal: Garça")
elif (valor_nota == 10) :
	print("Entrada: " , valor_nota)
	print("Animal: Arara")
elif (valor_nota == 20) :
	print("Entrada: " , valor_nota)
	print("Animal: Mico-leao-dourado")
elif (valor_nota == 50) :
	print("Entrada: " , valor_nota)
	print("Animal: Onça-pintada")
elif (valor_nota == 100) :
	print("Entrada: " , valor_nota)
	print("Animal: Garoupa")
	
else :
	print("Entrada: " , valor_nota)
	print("Animal: Invalido")
-- EXECUTION TIME:
0.143627
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada:  7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada:  50
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:38:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

#Uma entrada com valor real inteiro(representando a nota)
valor_nota=int(input("valor da nota :"))
#Sera um if, elife para cada nota e por ultimo o else sera se " Animal: Invalido"
if (valor_nota == 2) :
	print("Entrada: " , valor_nota)
	print("Animal: Tartaruga")
elif (valor_nota == 5) :
	print("Entrada: " , valor_nota)
	print("Animal: Garça")
elif (valor_nota == 10) :
	print("Entrada: " , valor_nota)
	print("Animal: Arara")
elif (valor_nota == 20) :
	print("Entrada: " , valor_nota)
	print("Animal: Mico-leao-dourado")
elif (valor_nota == 50) :
	print("Entrada: " , valor_nota)
	print("Animal: Onça-pintada")
elif (valor_nota == 100) :
	print("Entrada: " , valor_nota)
	print("Animal: Garoupa")
	
else :
	print("Entrada: " , valor_nota)
	print("Animal: Invalido")
-- OUTPUT:
Entrada:  100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:39:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

#Uma entrada com valor real inteiro(representando a nota)
valor_nota=int(input("valor da nota :"))
#Sera um if, elife para cada nota e por ultimo o else sera se " Animal: Invalido"
if (valor_nota == 2) :
	print("Entrada: " , valor_nota)
	print("Animal: Tartaruga")
elif (valor_nota == 5) :
	print("Entrada: " , valor_nota)
	print("Animal: Garça")
elif (valor_nota == 10) :
	print("Entrada: " , valor_nota)
	print("Animal: Arara")
elif (valor_nota == 20) :
	print("Entrada:" , valor_nota)
	print("Animal: Mico-leao-dourado")
elif (valor_nota == 50) :
	print("Entrada: " , valor_nota)
	print("Animal: Onça-pintada")
elif (valor_nota == 100) :
	print("Entrada:" , valor_nota)
	print("Animal: Garoupa")
	
else :
	print("Entrada:" , valor_nota)
	print("Animal: Invalido")
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:39:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

#Uma entrada com valor real inteiro(representando a nota)
valor_nota=int(input("valor da nota :"))
#Sera um if, elife para cada nota e por ultimo o else sera se " Animal: Invalido"
if (valor_nota == 2) :
	print("Entrada: " , valor_nota)
	print("Animal: Tartaruga")
elif (valor_nota == 5) :
	print("Entrada: " , valor_nota)
	print("Animal: Garça")
elif (valor_nota == 10) :
	print("Entrada: " , valor_nota)
	print("Animal: Arara")
elif (valor_nota == 20) :
	print("Entrada:" , valor_nota)
	print("Animal: Mico-leao-dourado")
elif (valor_nota == 50) :
	print("Entrada: " , valor_nota)
	print("Animal: Onça-pintada")
elif (valor_nota == 100) :
	print("Entrada:" , valor_nota)
	print("Animal: Garoupa")
	
else :
	print("Entrada:" , valor_nota)
	print("Animal: Invalido")
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:39:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

#Uma entrada com valor real inteiro(representando a nota)
valor_nota=int(input("valor da nota :"))
#Sera um if, elife para cada nota e por ultimo o else sera se " Animal: Invalido"
if (valor_nota == 2) :
	print("Entrada:" , valor_nota)
	print("Animal: Tartaruga")
elif (valor_nota == 5) :
	print("Entrada:" , valor_nota)
	print("Animal: Garça")
elif (valor_nota == 10) :
	print("Entrada:" , valor_nota)
	print("Animal: Arara")
elif (valor_nota == 20) :
	print("Entrada:" , valor_nota)
	print("Animal: Mico-leao-dourado")
elif (valor_nota == 50) :
	print("Entrada: " , valor_nota)
	print("Animal: Onça-pintada")
elif (valor_nota == 100) :
	print("Entrada:" , valor_nota)
	print("Animal: Garoupa")
	
else :
	print("Entrada:" , valor_nota)
	print("Animal: Invalido")
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 18:39:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

#Uma entrada com valor real inteiro(representando a nota)
valor_nota=int(input("valor da nota :"))
#Sera um if, elife para cada nota e por ultimo o else sera se " Animal: Invalido"
if (valor_nota == 2) :
	print("Entrada:" , valor_nota)
	print("Animal: Tartaruga")
elif (valor_nota == 5) :
	print("Entrada:" , valor_nota)
	print("Animal: Garça")
elif (valor_nota == 10) :
	print("Entrada:" , valor_nota)
	print("Animal: Arara")
elif (valor_nota == 20) :
	print("Entrada:" , valor_nota)
	print("Animal: Mico-leao-dourado")
elif (valor_nota == 50) :
	print("Entrada: " , valor_nota)
	print("Animal: Onça-pintada")
elif (valor_nota == 100) :
	print("Entrada:" , valor_nota)
	print("Animal: Garoupa")
	
else :
	print("Entrada:" , valor_nota)
	print("Animal: Invalido")
-- EXECUTION TIME:
0.138347
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada:  50
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:40:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

#Uma entrada com valor real inteiro(representando a nota)
valor_nota=int(input("valor da nota :"))
#Sera um if, elife para cada nota e por ultimo o else sera se " Animal: Invalido"
if (valor_nota == 2) :
	print("Entrada:" , valor_nota)
	print("Animal: Tartaruga")
elif (valor_nota == 5) :
	print("Entrada:" , valor_nota)
	print("Animal: Garça")
elif (valor_nota == 10) :
	print("Entrada:" , valor_nota)
	print("Animal: Arara")
elif (valor_nota == 20) :
	print("Entrada:" , valor_nota)
	print("Animal: Mico-leao-dourado")
elif (valor_nota == 50) :
	print("Entrada: " , valor_nota)
	print("Animal: Onça-pintada")
elif (valor_nota == 100) :
	print("Entrada:" , valor_nota)
	print("Animal: Garoupa")
	
else :
	print("Entrada:" , valor_nota)
	print("Animal: Invalido")
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 18:40:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

#Uma entrada com valor real inteiro(representando a nota)
valor_nota=int(input("valor da nota :"))
#Sera um if, elife para cada nota e por ultimo o else sera se " Animal: Invalido"
if (valor_nota == 2) :
	print("Entrada:" , valor_nota)
	print("Animal: Tartaruga")
elif (valor_nota == 5) :
	print("Entrada:" , valor_nota)
	print("Animal: Garca")
elif (valor_nota == 10) :
	print("Entrada:" , valor_nota)
	print("Animal: Arara")
elif (valor_nota == 20) :
	print("Entrada:" , valor_nota)
	print("Animal: Mico-leao-dourado")
elif (valor_nota == 50) :
	print("Entrada: " , valor_nota)
	print("Animal: Onca-pintada")
elif (valor_nota == 100) :
	print("Entrada:" , valor_nota)
	print("Animal: Garoupa")
	
else :
	print("Entrada:" , valor_nota)
	print("Animal: Invalido")
-- EXECUTION TIME:
0.1419
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada:  50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
